manifests/awesome-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awesome-app
  name: awesome-app-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awesome-app
  template:
    metadata:
      labels:
        app: awesome-app
    spec:
      containers:
      - image: ghcr.io/arogic/awesome-app:1.0.40
        name: awesome-app
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
      imagePullSecrets:
        - name: argocd-demo-secret
      nodeSelector:
        kubernetes.io/os: linux
