manifests/awesome-app-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome-app
  name: awesome-app
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: awesome-app
  type: ClusterIP
  # type: LoadBalancer
