manifests/awesome-app-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: awesome-app
            port:
              number: 80
